<resources>
    <string name="app_name">Chron</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_prompt">Have an account? Click here to login</string>
    <string name="register_prompt">Don\'t have an account? Click here to register</string>
    <string name="required_field">Required</string>
    <string name="failed_login">Invalid Username or Password</string>
    <string name="user_exists">Username already exists</string>

    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="date_hint">Date</string>
    <string name="message_hint">Message</string>

    <string name="add_button">Add Person</string>
    <string name="choose_button">Choose Contact</string>

    <string name="name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="phone_digits">0123456789</string>

    <string name="send_text">Send</string>
    <string name="edit_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="edit_title">Edit Information</string>
    <string name="remove_title">Delete %s?</string>
    <string name="delete_text">Delete</string>

    <string name="nav_add">Add People</string>
    <string name="nav_view">View Birthdays</string>
    <string name="nav_logout">Logout</string>

    <string name="view_header">Birthdays</string>
    <string name="add_header">Add Person</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="logout_prompt">Are you sure you want to logout?</string>

    <string name="channel_name">Chron Notifications</string>
    <string name="channel_description">Birthday Notifications from Chron</string>

    <string name="filler_text">FILLER TEXT; SHOULD NOT BE HERE</string>
    <string name="filler_date">Abcdefghi 99</string>

    <string name="user_object_key">USER OBJECT KEY</string>
    <string name="user_name_key">USER NAME KEY</string>
    <string name="preference_file_key">com.dragynslayr.chron.PREFERENCE_FILE_KEY</string>
    <string name="user_token_key">USER TOKEN KEY</string>
</resources>